Fix curations display swift code typo

--- a/curations_display.html
+++ b/curations_display.html
@@ -389,7 +389,7 @@ class ViewController: UIViewController, UICollectionViewDataSource, UICollection
         feedRequest.hasPhoto = true
         feedRequest.withProductData = true
 
-        self.curationsCollectionView.loadFeedWithRequest(feedParams, withWidgetId: nil, completionHandler: { (feedItems) -> Void in
+        self.curationsCollectionView.loadFeedWithRequest(feedRequest, withWidgetId: nil, completionHandler: { (feedItems) -> Void in
             // success
             // closure from request returned on main thread
 
